--- a/template.html
+++ b/template.html
@@ -35,6 +35,7 @@
     <!-- HEADER -->
     <header class="header">
         <div class="container-fluid">
+            <div class="header-wrapper">
             <div class="row">
                 <div class="col-lg-3">
                     <a href="#" class="header-logo">
@@ -42,8 +43,7 @@
                     </a>
                 </div>
             </div>
-
-
+            </div>
 
             <nav class="header__nav" role="navigation">
                 <ul class="header__nav-list">
