--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
     <!--[if IE]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -36,23 +39,78 @@
     <header class="header">
         <div class="container-fluid">
             <div class="header-wrapper">
-            <div class="row">
-                <div class="col-lg-3">
+            <div class="row align-items-center">
+                <div class="col-md-4 col-sm-12 col-12 header-first">
+
                     <a href="#" class="header-logo">
                         <img src="img/logo.png" alt="logo" class="img-fluid">
                     </a>
+                    <div class="burger-button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-12 header-second">
+                    <nav class="header-nav">
+                        <ul class="header-list">
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">МАГАЗИН</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">ОТЗЫВЫ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">FAQ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">О НАС</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-md-3 col-sm-12 header-third">
+                    <div class="header-address">
+                        <ul class="header-address-list">
+                            <li class="header-address-item">ХАРЬКОВ</li>
+                            <li class="header-address-item"><a href="tel:+380665254066" target="_blank">+38 (066) 52-54-066</a></li>
+                            <li class="header-address-item">ул. Третья, 24</li>
+                            <li class="header-address-item"><a href="mailto:blvck.com.ua@gmail.com" target="_blank">blvck.com.ua@gmail.com</a></li>
+                        </ul>
+                        <ul class="header-address-social">
+                            <li><a href="#"><img src="img/i.png" alt="instagram" class="img-fluid"></a></li>
+                            <li><a href="#"><img src="img/f.png" alt="facebook" class="img-fluid"></a></li>
+                        </ul>
+                        <div class="header-basket">
+                            <a href="#"><img src="img/bas.png" alt="basket" class="img-fluid">Корзина</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             </div>
-
-            <nav class="header__nav" role="navigation">
-                <ul class="header__nav-list">
-                    <li class="header__nav-list-item">
-                        <a href="#" class="header__nav-link header__nav-link--current"></a>
-                    </li>
-                </ul>
-            </nav>
-
+        </div>
+        <div class="header-menu">
+            <div class="container">
+                <div class="row">
+                    <nav class="mobile-nav">
+                        <ul class="header-list">
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">МАГАЗИН</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">ОТЗЫВЫ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">FAQ</a>
+                            </li>
+                            <li class="header-list-item">
+                                <a href="#" class="header-link">О НАС</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header><!-- HEADER [END] -->
 		
@@ -60,17 +118,35 @@
 
 
 	<main class="content">
-		<!--<section class="baner">-->
-			<!--<div class="container-fluid">-->
-				<!--<h1>КРАСОТА-->
-					<!--В  ВАШЕМ-->
-					<!--ОТРАЖЕНИИ!</h1>-->
-				<!--<p>BLACK REFLECTION ПОМОЖЕТ-->
-					<!--ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.-->
-					<!--БУДЬ ОСОБЕННЫМ. </p>-->
+		<section class="baner">
+			<div class="container-fluid">
+				<div class="row dnone">
+					<div class="col-sm-4 baner-first"></div>
+					<div class="col-sm-4 baner-second">
+						<h1>КРАСОТА<br>
+						В  ВАШЕМ<br>
+						ОТРАЖЕНИИ!</h1>
+						<p><span>BLACK REFLECTION</span> ПОМОЖЕТ
+						ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.
+						БУДЬ ОСОБЕННЫМ. </p>
+					</div>
+					<div class="col-sm-4 baner-third"></div>
+				</div>
+				<div class="row dblock">
+					<div class="col baner-main">
+						<h1>КРАСОТА
+							В  ВАШЕМ
+							ОТРАЖЕНИИ!</h1>
+						<p><span>BLACK REFLECTION</span> ПОМОЖЕТ
+							ПОДЧЕРКНУТЬ ТВОЙ ИНТЕРЬЕР ИНДИВИДУАЛЬНОЙ МЕБЕЛЬЮ.
+							БУДЬ ОСОБЕННЫМ. </p>
+					</div>
+				</div>
 
-			<!--</div>-->
-		<!--</section>-->
+
+			</div>
+
+		</section>
 	<section class="product-titles">
 		<div class="container-fluid">
 			<h3 class="title">Товары</h3>
@@ -131,6 +207,36 @@
 		<section class="reviews">
 			<div class="container-fluid">
 			<h3 class="title">ОТЗЫВЫ</h3>
+				<div class="row">
+					<div class="col-sm-6 offset-sm-3">
+						<div class="reviews-slider">
+							<div>
+								<div class="reviews-slider-img">
+									<img src="img/sl.jpg" alt="slider" class="img-fluid">
+								</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div>
+							</div>
+							<div><div class="reviews-slider-img">
+								<img src="img/sl.jpg" alt="slider" class="img-fluid">
+							</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div></div>
+							<div><div class="reviews-slider-img">
+								<img src="img/sl.jpg" alt="slider" class="img-fluid">
+							</div>
+								<div class="reviews-slider-text">
+									<div class="reviews-slider-title">ЕЛЕНА НАУМОВА</div>
+									<div class="reviews-slider-descr">Я ДИЗАЙНЕР ИНТЕРЬЕРОВ. И СТОЛКНУЛОСЬ С ТАКОЙ ПРОБЛЕМОЙ, ЧТО ОКАЗАЛОСЬ ТЯЖЕЛО НАЙТИ НУЖНУЮ МЕБЕЛЬ К МОЕМУ ПРОЕКТУ. ПЕРЕРЫЛА ВЕСЬ ИНТЕРНЕТ И ПОПАЛА НА ЭТИХ РЕБЯТ. БЫЛА ОЧЕНЬ ПРИЯТНО УДИВЛЕНА КАЧЕСТВОМ И СКОРОСТЬЮ. ЗАКАЗ БЫЛ КРУПНЫЙ. БЫЛО НЕСКОЛЬКО ПРОЕКТОВ. ОДИН ИЗ НИХ РЕСТОРАН В СТИЛЕ ЛОФТ. БЫЛА ВЫПОЛНЕНА КОЛОССАЛЬНАЯ РАБОТА И <span>BLACK REFLECTION</span> СПРАВИЛИСЬ С ЭТОЙ ЗАДАЧЕЙ НА ВСЕ 100%. СПАСИБО!</div>
+								</div></div>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</section>
 		<section class="faq">
@@ -196,9 +302,76 @@
 			</div>
 
 		</section>
-
-
-
+<section class="about">
+	<div class="container-fluid">
+		<h3 class="title">О нас</h3>
+		<div class="row">
+			<div class="col-lg-5 text-center">
+				<a href="https://goo.gl/maps/v75umJUBMH92" target="_blank" class="about-link-map"><img src="img/map.png" alt="map" class="img-fluid"></a>
+			</div>
+			<div class="col-lg-7">
+				<div class="about-title">
+					<span>BLACK REFLECTION</span> - ЭТО ВАША ВОЗМОЖНОСТЬ ПОДЧЕРКНУТЬ СВОЙ ИНТЕРЬЕР УНИКАЛЬНОЙ, ЭСТЕТИЧЕСКОЙ, СОВРЕМЕННОЙ МЕБЛЬЮ. МЫ С ЛЮБОВЬЮ ОТНОСИМСЯ К КАЖДОЙ ИЗГОТОВЛЕННОЙ НАМИ ДЕТАЛИ И ПОЭТОМУ ВЫ ПОЛУЧИТЕ КАЧЕСТВЕННЫЙ ТОВАР. НЕСМОТРЯ НА ТО, ЧТО НА РЫНКЕ РАБОТАЕМ НЕ ДОЛГО, У НАС УЖЕ СФОРМИРОВАЛАСЬ БОЛЬШАЯ КЛИЕНТСКАЯ БАЗА, В КОТОРОЙ ЕСТЬ НЕ ТОЛЬКО ОБЫЧНЫЕ ЗАКАЗЧИКИ, НО И ДИЗАЙНЕРЫ С АРХИТЕКТОРАМИ.
+				</div>
+				<img src="img/footer.png" alt="photo" class="img-fluid">
+				<div class="text-center about-town">ХАРЬКОВ</div>
+				<ul class="about-list">
+					<li class="about-item">
+						<a href="tel:+380665254066" class="about-link">
+							<div class="about-img">
+								<img src="img/ph.png" alt="phone" class="img-fluid">
+							</div>
+							<span>ТЕЛЕФОН</span>
+							<p>+38(066)52-54-066</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<div class="about-img">
+							<img src="img/m.png" alt="map" class="img-fluid">
+						</div>
+						<span>АДРЕС</span>
+						<p>ул. Третья, 24</p>
+					</li>
+					<li class="about-item">
+						<div class="about-img">
+							<img src="img/clock.png" alt="cl" class="img-fluid">
+						</div>
+						<span>Режим работы</span>
+						<p>Ежедневно<br>
+							с 8-18.00</p>
+					</li>
+					<li class="about-item">
+						<a href="mailto:blvck.com.ua@gmail.com" class="about-link">
+							<div class="about-img">
+								<img src="img/email.png" alt="email" class="img-fluid">
+							</div>
+							<span>E-MAIL</span>
+							<p>blvck.com.ua@gmail.com</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<a href="#" class="about-link">
+							<div class="about-img">
+								<img src="img/i.png" alt="instagram" class="img-fluid">
+							</div>
+							<span>Instagram</span>
+							<p>@blvck.com.ua</p>
+						</a>
+					</li>
+					<li class="about-item">
+						<a href="#" class="about-link">
+							<div class="about-img">
+								<img src="img/f.png" alt="facebook" class="img-fluid">
+							</div>
+							<span>FACEBOOK</span>
+							<p>@blvck.com.ua</p>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
 	</main><!-- MAIN CONTENT [END] -->
 
 	</div><!-- FOOTER FIX [END] -->
@@ -211,10 +384,12 @@
 	</footer><!-- FOOTER END -->
 
 	<!-- Scripts load -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
+	<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script src="js/script.js"></script>
 
 	</body>
